[gd_scene load_steps=18 format=3]

[ext_resource type="PackedScene" uid="uid://bp5dr3h8j1x2w" path="res://Scene/Base/BaseThroughLevel.tscn" id="1"]
[ext_resource type="Script" path="res://Script/Level/Level_23.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dmsnji1k0y0b0" path="res://Art/Level/Game3Level/Level_1_3/FristBG.png" id="3"]
[ext_resource type="Texture2D" uid="uid://ckwdv830ghdbn" path="res://Art/Level/Game3Level/Level_1_3/BG6.png" id="4"]
[ext_resource type="Texture2D" uid="uid://ci3vb046vf0l" path="res://Art/Level/Game3Level/Level_Hide/yunzuo.png" id="5"]
[ext_resource type="Texture2D" uid="uid://5fjkw0dhpuwt" path="res://Art/Level/Game3Level/Level_Hide/yunyou.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bb5xu3c5u64rx" path="res://Art/Level/Game3Level/Level_1_3/Floor5.png" id="7"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(845, 1109)
script = null

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(1158, 1109)
script = null

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(24, 1109)
script = null

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(1315, 1109)
script = null

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(5662, 683)
script = null

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(706.75, 1420)
script = null

[sub_resource type="Animation" id="7"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackGround/floor_2/Yunzuo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1880, 425), Vector2(1500, 425)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BackGround/floor_2/Yunyou:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2114, 422), Vector2(2400, 422)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BackGround/floor_2/Yunzuo:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BackGround/floor_2/Yunyou:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Check/check:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Tp/tp:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
script = null

[sub_resource type="AnimationLibrary" id="8"]
_data = {
"open": SubResource( "7" )
}
script = null

[sub_resource type="RectangleShape2D" id="9"]
size = Vector2(121, 82)
script = null

[sub_resource type="RectangleShape2D" id="10"]
size = Vector2(166, 134)
script = null

[node name="Level_23" instance=ExtResource( "1" )]
script = ExtResource( "2" )
metadata/_edit_vertical_guides_ = [1101.0, 3590.0, 4600.0]

[node name="wall_left" parent="wall" index="0"]
position = Vector2(-963, -417)

[node name="stop1" type="CollisionShape2D" parent="wall" index="2"]
position = Vector2(1521.5, -72.5)
shape = SubResource( "1" )
metadata/_edit_lock_ = true

[node name="stop2" type="CollisionShape2D" parent="wall" index="3"]
position = Vector2(2829, -77)
shape = SubResource( "2" )
metadata/_edit_lock_ = true

[node name="stop3" type="CollisionShape2D" parent="wall" index="4"]
position = Vector2(3511, -79)
shape = SubResource( "3" )
metadata/_edit_lock_ = true

[node name="stop4" type="CollisionShape2D" parent="wall" index="5"]
position = Vector2(5255.5, -79)
shape = SubResource( "4" )
metadata/_edit_lock_ = true

[node name="floor" type="CollisionShape2D" parent="wall" index="6"]
position = Vector2(2812, 735.5)
shape = SubResource( "5" )
metadata/_edit_lock_ = true

[node name="stop5" type="CollisionShape2D" parent="wall" index="7"]
position = Vector2(3170.63, -211)
shape = SubResource( "6" )
disabled = true
metadata/_edit_lock_ = true

[node name="FristBg" type="Sprite2D" parent="BackGround/End" index="0"]
position = Vector2(720, 345)
texture = ExtResource( "3" )

[node name="front" type="ParallaxLayer" parent="BackGround" index="1"]

[node name="Bg6" type="Sprite2D" parent="BackGround/front" index="0"]
position = Vector2(2379, 295)
texture = ExtResource( "4" )
metadata/_edit_lock_ = true

[node name="Yunzuo" type="Sprite2D" parent="BackGround/floor_2" index="0"]
position = Vector2(1880, 425)
texture = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="Yunyou" type="Sprite2D" parent="BackGround/floor_2" index="1"]
position = Vector2(2114, 422)
texture = ExtResource( "6" )
metadata/_edit_lock_ = true

[node name="Floor5" type="Sprite2D" parent="BackGround/floor_2" index="2"]
position = Vector2(2828, 542)
texture = ExtResource( "7" )
metadata/_edit_lock_ = true

[node name="exit" parent="." index="10"]
position = Vector2(4471, 321)
metadata/_edit_lock_ = true

[node name="yun" type="AnimationPlayer" parent="." index="14"]
libraries = {
"": SubResource( "8" )
}

[node name="Check" type="Area2D" parent="." index="15"]
position = Vector2(2002, 331)
collision_layer = 0
collision_mask = 2

[node name="check" type="CollisionShape2D" parent="Check" index="0"]
position = Vector2(-17.5, -5)
shape = SubResource( "9" )
metadata/_edit_lock_ = true

[node name="Tp" type="Area2D" parent="." index="16"]
position = Vector2(2008, 342)
collision_layer = 16
collision_mask = 16

[node name="tp" type="CollisionShape2D" parent="Tp" index="0"]
position = Vector2(-4, -27)
shape = SubResource( "10" )
disabled = true
metadata/_edit_lock_ = true

[node name="TTP" type="Timer" parent="." index="17"]
one_shot = true

[connection signal="area_entered" from="Check" to="." method="_on_check_area_entered" flags=18]
[connection signal="body_entered" from="Tp" to="." method="_on_tp_body_entered" flags=18]
[connection signal="body_exited" from="Tp" to="." method="_on_tp_body_exited" flags=18]
[connection signal="timeout" from="TTP" to="." method="_on_ttp_timeout" flags=18]
